--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.16.0",
-    "firebase-admin": "^5.12.0",
+    "firebase-admin": "^5.13.1",
     "firebase-functions": "^1.0.2",
     "hbs": "~4.0.1",
-    "http-errors": "~1.6.2",
+    "http-errors": "^1.6.3",
     "morgan": "~1.9.0",
     "redis": "^2.8.0",
     "web-push": "^3.3.0"
